# mempy

./: .gitignore  Agent_Memory_深度研究报告.md  DOC_REORGANIZATION_COMPLETE.md  DOC_REVIEW.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  接口组织分析.md
doc/: README.md  adapter-guide.md  api.md  architecture.md  benchmark-guide.md  benchmark.md  project-guide.md  quickstart.md  relation_builder_guide.md  strategies.md  strategy_system.md
examples/: quickstart.py  relation_builder_demo.py  strategy_system_demo.py
mempy/: __init__.py  config.py  memory.py
mempy/core/: __init__.py  exceptions.py  interfaces.py  memory.py
mempy/processors/: __init__.py  base.py  llm_processor.py
mempy/storage/: __init__.py  backend.py  graph_store.py  vector_store.py
mempy/strategies/: __init__.py  builders.py  confidence.py  exploration.py  firmness.py  forgetting.py
tests/: FINAL_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  TESTING.md  __init__.py  conftest.py  test_core.py  test_graph_store.py  test_memory_api.py  test_processors.py  test_storage_backend.py
tests/benchmarks/: .env.example  README.md  __init__.py
tests/benchmarks/adapters/: __init__.py  mock.py  openai.py  qwen.py  zhipu.py
tests/benchmarks/adapters/examples/: run_with_mock.py  run_with_qwen.py
tests/benchmarks/locomo/: __init__.py  dataset.py  evaluator.py  metrics.py  run_evaluation.py  test_e2e_quick.py  test_e2e_zhipu.py
tests/benchmarks/verification/: compare_embedders.py  compare_relation_builders.py  test_relation_builder_simple.py
tests/integration/: test_builders.py  test_evolution.py  test_strategy_system.py
tests/unit/: test_config.py  test_strategies.py
